Fix Carousel Center item, add div and styling resing and controlling when on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,10 +26,19 @@ blockquote .overview{
     text-align: left;
 }
 
+.carousel-container{
+    height: 450px;
+    font-weight: bold;
+
+}
+
 .carousel{
-    height: 550px;
+    height: 600px;
+    margin-top: -180px;
     font-weight: bold;
 }
+
+
 
 .section .block-content,
 .section .picture{
